Fix: 클라이밍 채널 리스트 조회 API 로직 오류 수정